[package]
name = "nvyra-x-client"
version = "1.0.0"
edition = "2026"
authors = ["nvyra-x <support@nvyra.com>"]
description = "state-of-the-art high-performance inference client for nvyra-x"
license = "Proprietary"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
tokio = { version = "1.44", features = ["full", "parking_lot", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
hyper = { version = "1.5", features = ["full", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
rustls = { version = "0.23", features = ["ring"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["full", "retry", "timeout", "limit", "buffer"] }
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8", features = ["validation", "bytecheck"] }
simd-json = "0.14"
arrow = { version = "54", features = ["ipc", "json"] }
polars = { version = "0.46", features = ["json", "ipc", "lazy"] }
csv-async = { version = "1.3", features = ["tokio"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6.1"
flume = "0.11"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = { version = "0.17", features = ["tokio", "rayon"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
ahash = "0.8"
hashbrown = "0.15"
memmap2 = "0.9"
num_cpus = "1.16"
governor = "0.8"
nonzero_ext = "0.3"
backon = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
tokio-test = "0.4"

[[bench]]
name = "throughput"
harness = false
